## =========
Version 1.9-3 (development version)

New functionalities:
  - seqpcplot(): parallel coordinate plot for sequence data

Changes in existing functions:
  - seqplot(): new option type = "pc"
  - seqplot(), seqdplot(), seqiplot(), seqfplot(), seqmsplot(), seqrplot(): if 'density' and/or 'angle' 
    are used to produce shading lines instead of solid colors, the legend is plotted using the same
    parameters and thus corresponds to the colors used in the plot
  - seqplot(): if group argument is a factor, the plots are 
    now ordered the same way as the factor levels
  - seqplot(), plot.stslist(): if sortv is a factor, the 
    sequences are now sorted according to the order of the factor levels.
  - seqmodst() and plot.stslist.modst(): changed name of
    attribute "occurences" of object returned by seqmodst to 
    "occurrences". Made resulting changes in plot.stslsit.modst.

Bug fixes:
  - seqdef(): Corresponding weights not selected when selecting 
    subsets of sequence objects using rownames instead of direct indexes. Now setting names of weight vector to be the same as sequences rownames. (Alexis Gabadinho)


## ==========
Version 1.8-2

Vignettes: Slightly modified JSS article vol. 40(4) added as a vignette
    on state sequence analysis.

Misc:
  - added 'ex2' data sets to test and illustrate the handling of weights,
        type help(ex2) for details.

New functionalities:
  - New faster interface between C code and R.
  - seqalign() and associated print and plot methods to see computation details
        about the alignment of two state sequences.

Changes in existing functions:
  - seqtree(), disstree(): speed improvements.
  - seqtm(): gives a warning when state names or state labels contain a comma.
  - seqdef(): changed the display of alphabet, state labels and long labels when
        creating a state sequence object.
  - seqistatd() and seqmeant(): added 'prop' argument to calculate
        proportions of time spent in